# VaaniAI

./: PROJECT_PLAN.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_audio.py
src/audio/: audio_player.py  input_audio.py  stt_engine.py  tts_engine.py
src/core/: config.py  main.py
src/intelligence/: llm_client.py  memory.py  prompt_manager.py
src/utils/: logger.py
