[project]
name = "vaaniai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.39.0",
    "gtts>=2.5.4",
    "openai>=2.28.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "speechrecognition>=3.15.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
]
